tests/NormalTests/paczka1/small_fuzzy/54755245.err
Error in line 4: SVQco S481 85,0
Error in line 2: wQpP A111 10,6
Error in line 7: 9dkzP A110 15,4
Error in line 6: wQpP S463 10,6
